[package]
name = "helpdesk_event_management"
version = "0.1.0"
edition = "2021"

[dependencies]

tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
jsonwebtoken = "8.3.0"
reqwest = { version = "0.11", features = ["json"] }
keycloak = "0.1"
log = "0.4"
env_logger = "0.9"
thiserror = "1.0"
futures = "0.3"
